--- a/cart.html
+++ b/cart.html
@@ -22,19 +22,44 @@
         </header>
 
         <main class="row m-0 card">
-                <!-- <table class="table" id="table">
-                    <thead></thead>
-                    <tr>
-                        <th>Item</th>
-                        <th>Lense</th>
-                        <th>Price</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                </table> -->
 
         </main>
 
+        <section id="orderSection">
+            <br><br>
+            <h2 class="text-center">Submit Order</h2>
+            <form class="card p-5">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="surname">Surname</label>
+                        <input type="text" class="form-control" id="surname" placeholder="Surname" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="forename">Forename</label>
+                        <input type="text" class="form-control" id="forename" placeholder="Forename" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="surname">Address</label>
+                        <input type="text" class="form-control" id="address" placeholder="House number and street"
+                            required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="city">City</label>
+                        <input type="text" class="form-control" id="city" placeholder="City" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Order</button>
+            </form>
+            <br>
+        </section>
         <footer class="bg-light">
             <p class="text-center p-3">Tariq Mahmud 2020</p>
         </footer>
