--- a/cart.html
+++ b/cart.html
@@ -53,10 +53,10 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                        <input type="email" class="form-control" id="email" placeholder="Email" required>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit Order</button>
+                <button type="submit" id="submitButton" class="btn btn-primary">Submit Order</button>
             </form>
             <br>
         </section>
