--- a/cart.html
+++ b/cart.html
@@ -32,28 +32,28 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="surname">Surname</label>
-                        <input type="text" class="form-control" id="surname" placeholder="Surname" required>
+                        <input type="text" class="form-control" id="surname" placeholder="Surname" value="Bloggs" required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="forename">Forename</label>
-                        <input type="text" class="form-control" id="forename" placeholder="Forename" required>
+                        <input type="text" class="form-control" id="forename" placeholder="Forename" value="Joe" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="surname">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="House number and street"
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" id="address" value="11 London road" placeholder="House number and street"
                             required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="city">City</label>
-                        <input type="text" class="form-control" id="city" placeholder="City" required>
+                        <input type="text" class="form-control" id="city" value="London" placeholder="city" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Email" required>
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" value="joe@london.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" required>
                     </div>
                 </div>
                 <button type="submit" id="submitButton" class="btn btn-primary">Submit Order</button>
