some style changes

--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Cameras</title>
+    <title>Orinoco Cameras ltd - Cart</title>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,7 +18,7 @@
             <a href="cart.html" class="navbar-brand">Cart</a>
         </nav>
         <header class="jumbotron m-0">
-            <h1>Cameras Online</h1>
+            <h1>Orinoco Cameras ltd.</h1>
         </header>
 
         <main class="row m-0 card">
