--- a/confirmation.html
+++ b/confirmation.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Cameras</title>
+    <title>Orinoco Cameras ltd - Confirmation</title>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,12 +18,13 @@
             <a href="cart.html" class="navbar-brand">Cart</a>
         </nav>
         <header class="jumbotron m-0">
-            <h1>Cameras Online</h1>
+            <h1>Orinoco Cameras ltd.</h1>
         </header>
-        <br><br><br>
+        <br>
         <main class="row m-0">
-            <div class="card col-12 col-sm-6 card p-3 mx-auto">
-                <h2 class="text-center p-3">Your order Has Been placed</h2>
+            <div class="card col-12 col-sm-6 card p-3 mx-auto text-center">
+                <h2 class="text-success p-3">Thank You!</h2>
+                <h2 class="text-success p-3">Your order Has Been placed</h2>
                 <h5>Order ID</h5>
                 <p id="orderId"></p>
                 <h5>TotalPrice</h5>
