Added form validation

--- a/confirmation.html
+++ b/confirmation.html
@@ -24,7 +24,7 @@
         <main class="row m-0">
             <div class="card col-12 col-sm-6 card p-3 mx-auto text-center">
                 <h2 class="text-success p-3">Thank You!</h2>
-                <h2 class="text-success p-3">Your Order Has Been placed</h2>
+                <h2 class="text-success p-3">Your Order Has Been Placed!</h2>
                 <h5>Order ID</h5>
                 <p id="orderId"></p>
                 <h5>TotalPrice</h5>
