--- a/cart.html
+++ b/cart.html
@@ -32,31 +32,36 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="surname">Surname</label>
-                        <input type="text" class="form-control" id="surname" placeholder="Surname" value="Bloggs" required>
+                        <input type="text" class="form-control" id="surname" placeholder="Surname" pattern="[A-Za-z]{3,32}"required>
+                        <small class="text-danger d-none" id ="surnameError">Invalid Input</small>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="forename">Forename</label>
-                        <input type="text" class="form-control" id="forename" placeholder="Forename" value="Joe" required>
+                        <input type="text" class="form-control" id="forename" placeholder="Forename" pattern="[A-Za-z]{3,32}" required>
+                        <small class="text-danger d-none" id="forenameError">Invalid Input</small>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" value="11 London road" placeholder="House number and street"
-                            required>
+                        <input type="text" class="form-control" id="address" placeholder="House number and street" required>
+                        <small class="text-danger d-none"id="addressError">Invalid Input</small>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="city">City</label>
-                        <input type="text" class="form-control" id="city" value="London" placeholder="city" required>
+                        <input type="text" class="form-control" id="city" pattern="[A-Za-z]{3,32}" placeholder="city" required>
+                        <small class="text-danger d-none" id="cityError">Invalid Input</small>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" value="joe@london.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" required>
+                        <input type="email" class="form-control" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" required>
+                        <small class="text-danger d-none" id="emailError">Invalid Input</small>
                     </div>
                 </div>
                 <button type="submit" id="submitButton" class="btn btn-primary">Submit Order</button>
+                <small class="text-danger text-center d-none" id="submitError">All Fields Must be Filled in and be Valid.</small>
             </form>
             <br>
         </section>
