--- a/cart.html
+++ b/cart.html
@@ -32,35 +32,35 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="surname">Surname</label>
-                        <input type="text" class="form-control" id="surname" placeholder="Surname" pattern="[A-Za-z]{3,32}"required>
+                        <input type="text" class="form-control" id="surname" placeholder="Surname">
                         <small class="text-danger d-none" id ="surnameError">Invalid Input</small>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="forename">Forename</label>
-                        <input type="text" class="form-control" id="forename" placeholder="Forename" pattern="[A-Za-z]{3,32}" required>
+                        <input type="text" class="form-control" id="forename" placeholder="Forename">
                         <small class="text-danger d-none" id="forenameError">Invalid Input</small>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="House number and street" required>
+                        <input type="text" class="form-control" id="address" placeholder="House Number and Street">
                         <small class="text-danger d-none"id="addressError">Invalid Input</small>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="city">City</label>
-                        <input type="text" class="form-control" id="city" pattern="[A-Za-z]{3,32}" placeholder="city" required>
+                        <input type="text" class="form-control" id="city" pattern="[A-Za-z]{3,32}" placeholder="City">
                         <small class="text-danger d-none" id="cityError">Invalid Input</small>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" required>
+                        <input type="email" class="form-control" id="email" placeholder="example@mail.com">
                         <small class="text-danger d-none" id="emailError">Invalid Input</small>
                     </div>
                 </div>
-                <button type="submit" id="submitButton" class="btn btn-primary">Submit Order</button>
+                <input type="button" id="submitButton" class="btn btn-primary" value="Submit Order"></input>
                 <small class="text-danger text-center d-none" id="submitError">All Fields Must be Filled in and be Valid.</small>
             </form>
             <br>
